--- a/ftp-monitor.cabal
+++ b/ftp-monitor.cabal
@@ -21,6 +21,7 @@ executable ftp-monitor
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        attoparsec,
+                       base16-bytestring,
                        bytestring,
                        directory,
                        filepath,
