--- a/ftp-monitor.cabal
+++ b/ftp-monitor.cabal
@@ -19,19 +19,28 @@ executable ftp-monitor
                        LsParser
                        SqlQQ
                        Timestamp
+                       Cas
+                       Hash
+                       CommandLine
+                       Segment
+                       Util
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        attoparsec,
                        base16-bytestring,
                        bytestring,
+                       cryptonite,
                        directory,
                        filepath,
 --                       dns,
+                       io-streams,
+                       memory,
                        old-locale,
+                       optparse-applicative,
                        process,
                        sqlite-simple,
                        time,
                        template-haskell,
-                       text,                      
+                       text,
                        unix
   ghc-options: -Wall
