--- a/stack.yaml
+++ b/stack.yaml
@@ -9,7 +9,11 @@ packages:
 - '.'
 - location:
     git: https://github.com/lpsmith/configurator-ng.git
-    commit: 32d6c914d543435df4c1be2b8f758e75355f8687 
+    commit: 32d6c914d543435df4c1be2b8f758e75355f8687
+  extra-dep: true
+- location:
+    git: https://github.com/lpsmith/io-streams.git
+    commit: 94b425d663ac47d4646227827aa0dd159296e44f
   extra-dep: true
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
